--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ DB_PASSWORD="dinesh123" # Replace with your PostgreSQL password
 DB_HOST="localhost"         # Replace with your host, typically localhost
 DB_PORT=5432              # Default PostgreSQL port
 DB_NAME="dinesh" # Replace with your actual database name
+JWT_SECRET=helloworld
+JWT_EXPIRES_IN=1h
